Termine el modulo plato, falta administrador
